# magic-debugger

./: CMakeLists.txt  Makefile  README.md
ai-interface/: go.mod
ai-interface/api/: ai_helper.go  debugger.go  types.go
ai-interface/binding/: adapter.go  session.go  state.go  types.go  types_convert.go
ai-interface/cmd/ai-debug-server/: README.md  main.go
ai-interface/server/: websocket.go
include/: adapter.h  cJSON.h  dap_client.h  dap_protocol.h  dap_types.h  gdb_adapter.h  io_handler.h  lldb_adapter.h  logger.h  session_manager.h  shell_adapter.h  signal_handler.h  state_model.h  state_types.h  tui.h  tui_panel.h  types.h
src/: adapter.c  cJSON.c  dap_client.c  dap_types.c  gdb_adapter.c  io_handler.c  lldb_adapter.c  logger.c  session_manager.c  shell_adapter.c  signal_handler.c  state_model.c  state_types.c  tui.c  tui_panel.c  types.c
test/: test_adapter.c  test_session.c  test_state_model.c  test_tui.c
vim/autoload/: magic_debugger.vim
vim/autoload/magic_debugger/: cmd.vim  ui.vim
vim/plugin/: magic_debugger.vim
